--- a/my-coffee-venture/src/app/view/user/user.component.html
+++ b/my-coffee-venture/src/app/view/user/user.component.html
@@ -11,7 +11,7 @@
             avatar</button>
     </div>
     <div class="row">
-        <div class=" col-md-1">{{daysSelected | json}}
+        <div class=" col-md-1">
         </div>
 
         <div class="col-md-10">
@@ -53,11 +53,11 @@
         </div>
     </div>
 </div>
-<p-dialog [(visible)]="formDisplay" [modal]="true" [baseZIndex]="10000" appendTo="body" [style]=" {width: '70%%'} " [draggable]="true" [maximizable]="true " [closable]="false ">
+<p-dialog [(visible)]="formDisplay" [modal]="true" [baseZIndex]="10000" appendTo="body" [style]=" {width: '70%%'} " [draggable]="true" [maximizable]="true " [closable]="false " (onHide)="reset()">
     <p-header>
         <i class="fal fa-user-edit "></i> {{"Add journal " }}
     </p-header>
-    <form #form="ngForm">
+    <form autocomplete="off" #form="ngForm" id="journal-edit">
         <div class="col-md-12 ">
             <div class="form-row ">
                 <div class="col-md-6 ">
@@ -78,8 +78,8 @@
                 <div class="col-md-6 ">
                     <div class="form-group ">
                         <label>{{ 'What do you want to share?' }}</label>
-                        <validate-form [form]="form " controlName="name "></validate-form>
-                        <textarea placeholder="{{ 'Your journal goes here' }} " class=" form-control" rows="5 " cols="30" pInputTextarea autoResize="autoResize" [(ngModel)]="input.content " required name="content"></textarea>
+                        <validate-form [form]="form " controlName="content"></validate-form>
+                        <textarea placeholder="{{ 'Your journal goes here' }} " class=" form-control" rows="5 " cols="30" pInputTextarea autoResize="autoResize" [(ngModel)]="input.content" required name="content"></textarea>
                     </div>
                 </div>
 
