--- a/my-coffee-venture/src/app/module/sticky/post/post.component.html
+++ b/my-coffee-venture/src/app/module/sticky/post/post.component.html
@@ -4,15 +4,19 @@
         <mat-card-header class="justify-content-between" style=" text-align: center;">
             <div style="    display: flex; width: 200px;word-wrap: break-word;
     flex-direction: row;">
-                <div mat-card-avatar class="example-header-image" style="margin-bottom: 16px ;" [style.background-image]="'url(' + avatar  + ')'">
-
+                <div mat-card-avatar class="example-header-image" style="margin-bottom: 16px ;">
+                    <img [src]="avatar" style="height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    object-fit: cover;">
                 </div>
                 <div style="margin-left: 10px; text-align: left;">
                     <mat-card-title style="margin-bottom: 0; word-wrap: break-word;" class="wrap-text">
                         {{item.userName}}</mat-card-title>
                     <mat-card-subtitle class="wrap-text" style="word-wrap: break-word;">
-                        <span *ngIf="item.status == 0"><i class="fad fa-globe-asia"></i></span>
-                        <span *ngIf="item.status != 0"><i class="far fa-lock-alt"></i></span>{{item.feeling}}
+                        <span *ngIf="item.status == 0">Public</span>
+                        <span *ngIf="item.status != 0">Private</span> -- {{item.feeling}}
                     </mat-card-subtitle>
                 </div>
             </div>
