--- a/my-coffee-venture/src/app/view/user/shop-saved/shop-saved.component.html
+++ b/my-coffee-venture/src/app/view/user/shop-saved/shop-saved.component.html
@@ -1,48 +1,48 @@
-<div *ngFor="let i of items">
-    {{i.name}}
-</div>
-{{items}}
-<div class="mat-table__wrapper">
-    <p-table [value]="items" tableStyleClass="table-no-wrap">
-        <ng-template pTemplate="header">
-            <tr>
-                <th *ngFor="let col of cols" [width]="col.width" class="table-no-wrap" [ngClass]="col.class">
-                    {{ col.header}}
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-rowData let-rowIndex="rowIndex">
-            <tr>
-                <td [title]="rowIndex + 1">
-                    {{ rowIndex + 1 }}
-                </td>
-                <td [title]="rowData.id">
-                    {{ rowData.id}}
-                </td>
-                <td [title]="rowData.name">
-                    {{ rowData.name}}
-                </td>
-                <td [title]="rowData.address">
-                    {{ rowData.address}},{{ rowData.street}},{{ rowData.district}},{{ rowData.city}}
-                </td>
-                <td [title]="rowData.unitCode">
-                    {{ rowData.unitCode}}
-                </td>
-                <td class="action">
-                    <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="More actions">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                        <button mat-menu-item title="{{'Sửa'}}" (click)="onBtnDeleteClick(rowData.id)">
-                            <span>{{'DELETE'}}</span>
+<div class="container-fluid" style="margin-top:30px">
+    <div class="d-flex align-items-center justify-content-center" style="flex-direction: column; margin-bottom: 4rem;
+    ">
+        <h2>Welcome to your review page {{userName}}</h2>
+
+    </div>
+    <div class="mat-table__wrapper">
+        <p-table [value]="items" tableStyleClass="table-no-wrap" [autoLayout]="true">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th *ngFor="let col of cols" [width]="col.width" class="table-no-wrap" [ngClass]="col.class">
+                        {{ col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-rowIndex="rowIndex">
+                <tr>
+                    <td [title]="rowIndex + 1">
+                        {{ rowIndex + 1 }}
+                    </td>
+                    <td [title]="rowData.name">
+                        {{ rowData.name}}
+                    </td>
+                    <td [title]="rowData.address">
+                        {{ rowData.address}}, {{ rowData.street}}, {{ rowData.district}}, {{ rowData.city}}
+                    </td>
+                    <td [title]="'Categories'">
+                        <span *ngFor="let item of rowData.shopCategory">{{item.name+" " }} </span>
+                    </td>
+                    <td class="action">
+                        <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="More actions">
+                            <mat-icon>more_vert</mat-icon>
                         </button>
-                    </mat-menu>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <p-messages severity="info" *ngIf="!items  || items.length == 0">
-        <ng-template pTemplate>
-            <div class="p-ml-2">No data to display</div>
-        </ng-template>
-    </p-messages>
+                        <mat-menu #menu="matMenu">
+                            <button mat-menu-item title="{{'Xóa'}}" (click)="onBtnDeleteClick(rowData.id)">
+                                <span>{{'DELETE'}}</span>
+                            </button>
+                        </mat-menu>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+        <p-messages severity="info" *ngIf="!items  || items.length == 0">
+            <ng-template pTemplate>
+                <div class="p-ml-2">No data to display</div>
+            </ng-template>
+        </p-messages>
+    </div>
